SVG selectable export size by menu
Added option to select custom sizes of SVG by menu.

--- a/public_html/resources/styles/workbench.css
+++ b/public_html/resources/styles/workbench.css
@@ -24,12 +24,12 @@ h1 {
     /*height:16px;*/
 }
 
-.space{
+.space {
     margin-bottom: 1cm;
 }
 
 
-img{
+img {
     margin-top: 0.5cm;
     padding-left: 10px;
 }
@@ -42,7 +42,7 @@ h2 {
     font-family: sans-serif;
     font-size: 18px;
     width: 250px;
-    height:35px;
+    height: 35px;
     /*    float:top;*/
     /*height:16px;*/
 }
@@ -56,80 +56,59 @@ h2 {
 }
 
 #panelLeft {
-    order: 1;
     flex-grow: 1;
     float: left;
     width: 100px;
+    height: auto;
     padding: 2px;
 
-
-    margin-top: 1px;
-    margin-right: 0px;
-    margin-bottom: 1px;
-    margin-left: 0px;
-
-    padding-left: 0.75em;
-    padding-right: 0.75em;
-
-    /* border: 1px solid lightgray; */
-}
-
-#panelRight {
-
-    order: 2;
-    flex-grow: 1;
-    float: right;
-    width: 100px;
-    padding: 2px;
-    /* font-family: sans-serif; */
-
-    margin-top: 1px;
-    margin-right: 0px;
-    margin-bottom: 1px;
-    margin-left: 0px;
-
-    padding-left: 0.75em;
-    padding-right: 0.75em;
-
-    /* border: 1px solid lightgray; */
-
-}
-
-
-
-
-#panelWorkbenchControls {
     margin-top: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
+
     padding-left: 0.75em;
+    padding-right: 0.75em;
 
-
-    /* order: 1; */
-    /* flex-grow: 1; */
-    /* display:flex; */
-    /* float: left; */
-    /* width: 100px; */
-    /* width:auto; */
-    /* height:auto; */
-    /* padding: 2px; */
-    /* padding-right: 0.75em; */
     /* border: 1px solid lightgray; */
+
+
+}
+
+#panelRight {
+
+    flex-grow: 1;
+    float: left;
+    width: 100px;
+    height: auto;
+    padding: 2px;
+
+
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+
+    padding-left: 0.75em;
+    padding-right: 0.75em;
+
+    /* border: 1px solid lightgray; */
+
 }
 
 
 
-#panelWorkbenchInputLeft {
-    /* order: 1; */
-    flex-grow: 1;
-    /* display:flex; */
-    float: left;
-    /* width: 100px; */
-    width:auto;
-    height:auto;
-    padding: 2px;
 
+
+
+
+#panelWorkbenchInputLeft {
+
+    flex-grow: 1;
+    float: left;
+    width: auto;
+    height: auto;
+    padding: 2px;
 
     margin-top: 10px;
     margin-right: 10px;
@@ -140,24 +119,26 @@ h2 {
     padding-right: 0.75em;
 
     border: 1px solid lightgray;
+
+    /* order: 1; */
+    /* display:flex; */
+    /* width: 100px; */
+
 }
 
 
-#clear{
-    clear:both;
+#clear {
+    clear: both;
 }
 
 
 
 #panelWorkbenchInputRight {
-    /* order: 2; */
-    /* flex-wrap: nowrap; */
-    /* display: flex; */
+
     flex-grow: 1;
     float: left;
-    /* width: 700px; */
-    width:auto;
-    height:auto;
+    width: auto;
+    height: auto;
     padding: 2px;
 
 
@@ -187,7 +168,6 @@ h2 {
     padding-right: 0.75em;
 
     /* border: 1px solid lightgray; */
-
 }
 
 
@@ -214,7 +194,7 @@ h2 {
 
     color: white;
     /* color: black; */
-    
+
     background: black;
     /* background: whitesmoke; */
 
@@ -249,61 +229,40 @@ h2 {
 
 
 #panelControls {
-    display:flex;
+    display: flex;
     margin-top: 0.5cm;
     font-family: sans-serif;
-    /* margin-right: 32px; */
-    /* height: 30px; */
-    /* float: right; */
 
-    /* border: 1px solid lightgrey; */
+
+    height: automatic;
+
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+
+    /* border: 1px solid lightgray; */
+
 }
 
 
 
 
-
-/* #panelControlsLeft {
-    display:flex;
-    margin-top: 0.5cm;
-    font-family: sans-serif; */
-    /* margin-right: 32px; */
-    /* height: 30px; */
-    /* float: right; */
-
-    /* border: 1px solid lightgrey; */
-/* } */
-
-
-
-
-
-/* #panelControlsRight {
-    display:flex;
-    margin-top: 0.5cm;
-    font-family: sans-serif; */
-    /* margin-right: 32px; */
-    /* height: 30px; */
-    /* float: right; */
-
-    /* border: 1px solid lightgrey; */
-/* } */
-
-
-#panelExtraControls{
+#panelExtraControls {
     margin-top: 0.5cm;
     font-family: sans-serif;
     margin-right: 0px;
-    float:right;
+    float: right;
+
 }
 
 
-.input{
-    width:50px;
+.input {
+    width: 50px;
     font-family: sans-serif;
 }
 
-fieldset { 
+fieldset {
     display: block;
     margin-left: 2px;
     margin-right: 2px;
@@ -311,14 +270,15 @@ fieldset {
     padding-bottom: 0.625em;
     padding-left: 0.75em;
     padding-right: 0.75em;
-    border: 0px groove;
+
+    border: 1px solid lightgray;
 }
 
 
 
 
 #panelInput {
-    display:flex;
+    display: flex;
 
     margin-top: 0.5cm;
     font-family: sans-serif;
@@ -331,12 +291,6 @@ fieldset {
     margin-left: 10px;
 
     border: 1px solid lightgray;
-
-
-    /* background-color: DodgerBlue; */    
-    /* margin-right: 0px; */
-    /* float: left; */
-    /* flex-grow:1; */
 
 }
 
@@ -379,9 +333,8 @@ fieldset {
 
 
 
-.label{
-    /*Just for screen shots I used 35px*/
-    /*font: 35px "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+.label {
+
     display: inline-block;
     width: 200px;
     text-align: right;
@@ -389,40 +342,34 @@ fieldset {
     font-family: sans-serif;
     font-size: 12px;
 
-
-    /* font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif; */
-    /* font-weight: bold; */
-    /* text-anchor: middle; */
-
-        /* background-color: #04AA6D; */
-    /* text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff; */
+    /*Just for screen shots I used 35px*/
+    /*font: 35px "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 }
 
 
 .legend {
-    /*Just for screen shots I used 35px*/
-    /*font: 35px "Helvetica Neue", Helvetica, Arial, sans-serif;*/
     display: inline-block;
-    /* width: 200px; */
-    /* text-align: right; */
-
-
-    /* font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif; */
-    /* font-weight: bold; */
-    /* text-anchor: middle; */
-
-
-        /*margin-top:0cm;*/
-    /* font-family: sans-serif; */
     padding-left: 10px;
     font-family: sans-serif;
     font-size: 16px;
+    height: 35px;
+
+
+
+
+    /*Just for screen shots I used 35px*/
+    /*font: 35px "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+    /* width: 200px; */
+    /* text-align: right; */
+    /* font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    /* font-weight: bold; */
+    /* text-anchor: middle; */
+    /*margin-top:0cm;*/
+    /* font-family: sans-serif; */
     /* width: 250px; */
-    height:35px;
     /*    float:top;*/
     /*height:16px;*/
-
-        /* background-color: #04AA6D; */
+    /* background-color: #04AA6D; */
     /* text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff; */
 }
 
