Added dataset and instructions about how to use them.
Added dataset and instructions about how to use them. I also removed old code about some samples.
Explanations were added and the dataset is provided as a resource. The user has to download it and unzip it.

--- a/public_html/resources/styles/workbench.css
+++ b/public_html/resources/styles/workbench.css
@@ -248,13 +248,13 @@ h2 {
 
 
 
-#panelExtraControls {
+/* #panelExtraControls {
     margin-top: 0.5cm;
     font-family: sans-serif;
     margin-right: 0px;
     float: right;
 
-}
+} */
 
 
 .input {
